# ilga-graph

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  PERFORMANCE.md  README.md  SECURITY_ANALYSIS.md  TODOS.md  package-lock.json  pyproject.toml
.github/workflows/: ci.yml
ILGA_Graph_Vault/: Bills by Date.base  Members by Career.base  Members by Heat Score.base  Moneyball Leaderboard.base  Moneyball Report.md
ILGA_Graph_Vault/Bills/: HB4707.md  HB4713.md  HB4719.md  HB4723.md  HB4730.md  HB4769.md  HB4824.md  HB4851.md  HB5453.md  HB5486.md  HB5528.md  HB5606.md  SB3803.md  SB3805.md  SB3806.md  SB3807.md  SB3808.md  SB3815.md  SB3819.md  SB3837.md  SB3840.md  SB3841.md  SB3842.md  SB3845.md  SB3846.md  SB3847.md  SB3848.md  SB3849.md  SB3850.md  SB3851.md  SB3852.md  SB3853.md  SB3854.md  SB3855.md  SB3856.md  SB3857.md  SB3858.md  SB3859.md  SB3860.md  SB3861.md  (+60 more)
docs/: BILLS_FIRST_TESTING.md
graphql/: README.md  bill_vote_timeline.graphql  bill_with_votes_and_slips.graphql  paginated_queries.graphql  votes_with_counts.graphql
reference/: ilga_rules.json
scripts/: diagnostics_ml.py  generate_seed.py  log_dashboard.py  ml_pipeline.py  ml_predict.py  ml_resolve.py  ml_run.py  scrape.py  scrape_fulltext.py  scrape_votes.py  startup_timings_report.py
tests/: conftest.py  test_action_classifier.py  test_analytics.py  test_api.py  test_api_integration.py  test_exporter.py  test_main.py  test_models.py  test_moneyball.py  test_panel_labels.py  test_scrape_votes_sample.py  test_vote_name_normalizer.py  test_vote_timeline.py  test_witness_slips.py
(+270 files in other folders)
