[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ilga-graph"
version = "0.1.0"
description = "Scrape Illinois General Assembly data, export to Obsidian vault, and serve via GraphQL."
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "strawberry-graphql[fastapi]",
    "requests",
    "beautifulsoup4",
    "pdfplumber",
    "python-dotenv",
    "jinja2",
    "python-multipart",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "httpx",
    "rich",
    "pre-commit",
]
ml = [
    "polars",
    "pyarrow",
    "scikit-learn",
    "rich",
    "rapidfuzz",
    "networkx",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
# Query resolvers use state/helpers injected by main at runtime
"src/ilga_graph/schema.py" = ["F821"]
